Fix anchors being hidden by top nav bar

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -38,6 +38,14 @@
   min-height: 3em;
 }
 
+// When clicking an heading link and jumping to the anchor the heading is
+// hidden by the top bar so add this padding to ensure the heading anchor is
+// visible
+// This doesn't seem to be an issue in the docsy eample site. Not sure why.
+html {
+  scroll-padding-top: 60px; /* height of header */
+}
+
 .stroom-icon {
   vertical-align: -0.08em;
 }
@@ -133,4 +141,3 @@ h6[id]::before {
 Auto numbering end
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 */
-
